# django-app

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
my_first_site/blogapp/: admin.py  models.py  sitemap.py  urls.py  views.py
my_first_site/blogapp/migrations/: 0001_initial.py  0002_article_content.py  0003_articlerss.py
my_first_site/blogapp/templates/blogapp/: article_list.html  articlerss_detail.html  articlerss_list.html  base.html
my_first_site/locale/en/LC_MESSAGES/: django.po
my_first_site/locale/ru/LC_MESSAGES/: django.po
my_first_site/my_first_site/: settings.py  sitemaps.py  urls.py
my_first_site/myapiapp/: urls.py  views.py
my_first_site/myauth/: forms.py  models.py  tests.py  urls.py  views.py
my_first_site/myauth/migrations/: 0001_initial.py  0002_profile_avatar.py
my_first_site/myauth/templates/myauth/: login.html  (+4 more)
my_first_site/requestdataapp/: forms.py  middlewares.py  urls.py  views.py
my_first_site/shopapp/: admin.py  admin_mixins.py  forms.py  models.py  serializers.py  sitemap.py  tests.py  urls.py  views.py
my_first_site/shopapp/fixtures/: groups-fixtures.json  orders-fixtures.json  products-fixtures.json  user-fixtures.json
my_first_site/shopapp/migrations/: 0001_initial.py  0002_product_created_at_product_discount_product_price.py  0003_product_archived.py  0004_order.py  0005_order_user.py  0006_order_products.py  0007_alter_product_options_product_created_by.py  0008_order_receipt.py  0009_product_preview.py  0010_productimage.py  0011_alter_order_options_alter_product_options_and_more.py
(+28 files in other folders)
